css/style.css
.filters,
.goods {
	display: none;
}

.temp2,
.temp-catalog	{
	width: 100%;
	height: 167px;
	margin-bottom: 37px;
	background-color: rgba(255, 0, 0, .2);
}

.temp2 {
	height: 332px;
}

.temp-catalog {
	height: 1360px;
	margin-bottom: 20px;
}
/*********************/

body {
	width: 1200px;

	margin: 0 auto;
	padding: 0;

	font-family: "Roboto", "Arial", sans-serif;
	font-size: 16px;
	line-height: 22px;
	font-weight: 400;
	color: rgb(255, 255, 255);

	background-color: rgb(132, 157, 143);
}

a {
	text-decoration: none;
}

/*Styles for Overall Site*/
.visually-hidden {
	position: absolute;

	width: 1px;
	height: 1px;
	margin: -1px;
	padding: 0;

	border: 0;
	white-space: nowrap;

	clip: rect(0 0 0 0);
	overflow: hidden;
}

.hidden {
	display: none;
}

.container {
	position: relative;

	width: 1146px;
	margin: auto;
	padding-right: 27px;
	padding-left: 27px;
}

.border-bottom {
	border-bottom: 1px solid rgba(255, 255, 255, .2);
}

.border-bottom:hover,
.border-bottom:focus,
.border-bottom:active {
	border-color: rgba(255, 188, 158, .3);
}

.row {
	display: flex;
	justify-content: space-between;
}

.btn {
	display: inline-block;
	margin: 0;
	padding-top: 10px;
	padding-right: 25px;
	padding-bottom: 10px;
	padding-left: 25px;

	font-size: 18px;
	line-height: 24px;
	font-weight: 700;
	color: rgb(255, 255, 255);
	text-shadow: 2px 2px 5px rgba(160, 32, 11, .76);

	background: linear-gradient(to bottom, rgb(242, 104, 67), rgb(231, 74, 53));
	
	border-radius: 45px;
	border: none;
	box-shadow: 0 2px 2px rgba(172, 16, 0, .64)
}

.btn:hover,
.btn:focus {
	background-color: rgb(255, 255, 255);
	background: linear-gradient(to top, rgb(236, 111, 94), rgb(245, 134, 105));
	
	cursor: pointer;
	outline: none;
}

.btn:active {
	background-color: #fff;
	background: linear-gradient(to top, rgb(242, 104, 67), rgb(231, 74, 53));
	
	box-shadow: inset 0 2px 2px rgb(148, 39, 24);
	outline: none;
}

/*General Form styling*/
.form {
	padding-top: 20px;
	padding-right: 15px;
	padding-bottom: 20px;
	padding-left: 15px;

	background-color: rgb(248, 247, 244);

	z-index: 2;
}

.field-layout {
	position: relative;

	text-align: left;
}

.field-label {
	position: absolute;
	top: -15px;
	left: 15px;

	font-size: 11px;
	line-height: 13px;
	color: rgb(91, 157, 223);

	display: none;
}

.field-input,
.field-textarea {
	padding-top: 10px;
	padding-right: 15px;
	padding-bottom: 10px;
	padding-left: 15px;

	font-size: 14px;
	line-height: 24px;
	font-weight: 700;
	color: rgb(50, 50, 50);

	background-color: rgb(255, 255, 255);

	border: none;
	border-radius: 5px;
	box-shadow: inset 0 0 0 1px rgb(178, 178, 178);
}

.field-input:hover,
.field-textarea:hover {
	border: none;
	box-shadow: inset 0 0 0 2px rgb(198, 197, 196);
	outline: none;
}

.field-input:active,
.field-textarea:active,
.field-input:focus,
.field-textarea:focus {
	border: none;
	box-shadow: inset 0 0 0 2px rgb(143, 189, 236);
	outline: none;
}

.field-input::placeholder,
.field-textarea::placeholder {
	font-weight: 400;
	color: rgb(153, 153, 153);
}

.field-input:-ms-input-placeholder {
	font-weight: 400;
	color: rgb(153, 153, 153);
}

.field-textarea:-ms-input-placeholder {
	font-weight: 400;
	color: rgb(153, 153, 153);
}

.field-input:focus::-webkit-input-placeholder {
	color: transparent;
}

.field-input:focus::-moz-placeholder {
	color: transparent;
}

.field-input:focus:-ms-input-placeholder {
	color: transparent;
}

.field-textarea {
	resize: none;
}

.field-input:focus + .field-label,
.field-textarea:focus + .field-label {
	display: block;
}
/*END of General Form styling*/
/*END of Styles for Overall Site*/

/*Main Header*/
.main-header {
	display: flex;
	justify-content: space-between;
}

.main-logo {
	width: 154px;
	height: 64px;
	margin-right: 10px;
}

.main-navigation {
	display: flex;
	margin-top: 10px;
}

.main-navigation-list {
	display: flex;
	margin-top: 13px;
	padding: 0;

	list-style: none;
}

.main-navigation-item {
	position: relative;

	margin: 0;
	padding: 0;
}

.main-navigation-link {
	display: block;
	padding-top: 7px;
	padding-right: 14px;
	padding-bottom: 7px;
	padding-left: 14px;

	font-size: 16px;
	line-height: 18px;
	font-weight: 700;
	color: rgb(255, 255, 255);

	border-radius: 15px;
}

.main-navigation-link-current {
	background-color: rgb(208, 112, 88);
}

.main-navigation-link:hover,
.main-navigation-link:focus {
	color: rgb(50, 50, 50);

	background-color: rgb(247, 246, 243);

	outline: none;
}

.main-navigation-link:hover .border-bottom,
.main-navigation-link:focus .border-bottom {
	border: none;
}

.main-navigation-link:active {
	background-color: rgb(237, 237, 237);

	box-shadow: inset 0 2px 1px 0 rgb(105, 105, 105);
}

.dropdown-menu-list {
	position: absolute;
	top: 37px;
	left: -8px;

	margin: 0;
	padding: 0;

	background-color: rgb(247, 246, 243);

	border-radius: 5px;
	box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
	list-style: none;
	z-index: 3;

	display: none;
}

.dropdown-menu-item {
	font-size: 14px;
	line-height: 16px;
	font-weight: 400;
	color: rgb(50, 50, 50);
}

.dropdown-menu-item:first-child {
	padding-top: 11px;
	padding-right: 15px;
	padding-bottom: 7px;
	padding-left: 20px;
}

.dropdown-menu-item:first-child::after {
	content: '';

	position: absolute;
	top: 37px;
	left: 7px;

	width: 128px;
	height: 1px;

	background-color: rgba(0, 0, 0, .2);
}

.dropdown-menu-item:nth-child(2) {
	padding-top: 6px;
}

.dropdown-menu-item:last-child {
	padding-bottom: 8px;
}

.dropdown-link {
	display: inline-block;
	vertical-align: middle;
	margin: 0;
	padding-top: 9px;
	padding-bottom: 6px;
	padding-right: 14px;
	padding-left: 21px;
	min-width: 110px;

	color: rgb(50, 50, 50);
}


.dropdown-link:hover,
.dropdown-link:focus {
	background-color: rgb(251, 222, 215);
}

.dropdown-link:active {
	background-color: rgb(246, 181, 165);
}

.dropdown-link-current {
	background-color: rgb(208, 112, 88);
}

.main-navigation-item:hover .dropdown-menu-list,
.main-navigation-item:focus .dropdown-menu-list {
	display: block;
}
/* ... */

